--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ eframe = { version = "0.21.3", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
-    "dark-light",
+#    "dark-light",
 ] }
 getrandom = { version = "0.2", features = ["js"] }
 
