--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,20 +10,14 @@ license = "GPL-2.0-only"
 csv = "1.1"
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
-dioxus = "0.3.2"
-dioxus-web = "0.3.1"
+dioxus = "0.3.0"
+dioxus-web = "0.3.0"
+fermi = "0.3.0"
+wasm-bindgen = "=0.2.87"
 getrandom = { version = "0.2", features = ["js"] }
-
-# native:
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-tracing-subscriber = "0.3"
-
-# web:
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = "0.1.6"
-tracing-wasm = "0.2"
-wasm-bindgen-futures = "0.4"
-
+console_error_panic_hook = "0.1.7"
+log = "0.4.6"
+wasm-logger = "0.2.0"
 
 [profile.release]
 opt-level = 2 # fast and small wasm
@@ -31,4 +25,3 @@ opt-level = 2 # fast and small wasm
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
 opt-level = 2
-
