Remove branch specific changes

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - master
-      - github-toolchain
 # to only run when you do a new github release, comment out above part and uncomment the below trigger.
 # on:
 #   release:
@@ -37,10 +36,10 @@ jobs:
         # relatively as eframe_template/favicon.ico. if we skip public-url option, the href paths will instead request username.github.io/favicon.ico which
         # will obviously return error 404 not found.
         run: ./trunk build --release --public-url "${GITHUB_REPOSITORY#*/}"
-      #- name: Deploy
-      #  uses: JamesIves/github-pages-deploy-action@v4
-      #  with:
-      #    folder: dist
-      #    # this option will not maintain any history of your previous pages deployment
-      #    # set to false if you want all page build to be committed to your gh-pages branch history
-      #    single-commit: true
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
+          # this option will not maintain any history of your previous pages deployment
+          # set to false if you want all page build to be committed to your gh-pages branch history
+          single-commit: true
